--- a/NewScoreKeeper/app/src/main/res/layout/activity_main.xml
+++ b/NewScoreKeeper/app/src/main/res/layout/activity_main.xml
@@ -3,13 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/football_field"
-    android:orientation="vertical"
-     >
+    android:orientation="vertical">
 
     <LinearLayout
-        android:baselineAligned="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:baselineAligned="false"
         android:orientation="horizontal">
 
         <LinearLayout
